Bug 429436 - Calculator button not working for individual budget fields
Summary: Calculator button not working for individual budget fields
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-21 09:53 UTC by Paul Worrall
Modified: 2020-11-21 15:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2020-11-21 09:53:35 UTC
SUMMARY
When editing a budget, if I choose "Individual" periods for a category, the little calculator button for entering the amounts only works on the January Field, the other months don't work or show a garbled area on the screen.


SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.20
KDE Plasma Version: 5.20.3
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.1
Kernel Version: 5.4.0-54-generic
OS Type: 64-bit
Processors: 2 × AMD A6-6400K APU with Radeon(tm) HD Graphics
Memory: 7.7 GiB of RAM
Graphics Processor: AMD CEDAR
Comment 1 Thomas Baumgart 2020-11-21 15:37:30 UTC
Git commit 7767d4b4d16618460bf3b4b519351094083f5296 by Thomas Baumgart.
Committed on 21/11/2020 at 15:11.
Pushed by tbaumgart into branch 'master'.

Make calculator widget a parentless popup

Using the AmountEdit widget as parent widget for the calculator caused
trouble in some circumstances (see bug report). Making the popup
parentless solves the issue.

M  +12   -11   kmymoney/widgets/amountedit.cpp

https://invent.kde.org/office/kmymoney/commit/7767d4b4d16618460bf3b4b519351094083f5296
Comment 2 Thomas Baumgart 2020-11-21 15:37:44 UTC
Git commit 966c2133bdbc21de0af2f359516fe46310818035 by Thomas Baumgart.
Committed on 21/11/2020 at 15:19.
Pushed by tbaumgart into branch '5.1'.

Make calculator widget a parentless popup

Using the AmountEdit widget as parent widget for the calculator caused
trouble in some circumstances (see bug report). Making the popup
parentless solves the issue.
FIXED-IN: 5.1.1

(cherry picked from commit 7767d4b4d16618460bf3b4b519351094083f5296)

M  +20   -14   kmymoney/widgets/amountedit.cpp

https://invent.kde.org/office/kmymoney/commit/966c2133bdbc21de0af2f359516fe46310818035