Make calculator widget a parentless popup

Using the AmountEdit widget as parent widget for the calculator caused
trouble in some circumstances (see bug report). Making the popup
parentless solves the issue.

BUG: 429436
FIXED-IN: 5.1.1

(cherry picked from commit 7767d4b4d16618460bf3b4b519351094083f5296)